--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -58,7 +58,7 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto active" style="color:#fff; color.hover:#000;" href="#">Breaking News</a></li>
+        <li><a class="nav-link scrollto active" style="color:#fff; color.hover:#000;" href="{% url 'blogs' %}">Breaking News</a></li>
 
         <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
@@ -79,7 +79,7 @@
               <li>  <a href="#">Cyprus</a> </li>
               <li>  <a href="https://visatonewzealand.com/">New Zealand</a> </li>
               <li>  <a href="https://visatocanada.pro/">Canada</a> </li>
-              <li>  <a href="#">Germany</a> </li>
+              <li>  <a href="http://visatogermany.com/">Germany</a> </li>
               <li>  <a href="https://www.visatoaustralia.pro/">Australia</a> </li>
               <li>  <a href="#">Denmark</a> </li>
 
@@ -165,7 +165,7 @@
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatocyprus.com/">Cyprus</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatonewzealand.com/">NewZealand</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatocanada.pro/">Canada</a> </li>
-             <li> <i class="bx bx-chevron-right"></i> <a href="#">Germany</a> </li>
+             <li> <i class="bx bx-chevron-right"></i> <a href="http://visatogermany.com/">Germany</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://www.visatoaustralia.pro/">Australia</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="#">Denmark</a> </li>
 
