--- a/ireland_app/templates/longvisa.html
+++ b/ireland_app/templates/longvisa.html
@@ -296,7 +296,7 @@ If you are visiting another State prior to travelling to Ireland, you must have 
 
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/researcher.jpg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/policy researcher.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -445,7 +445,7 @@ You can apply for an Employment (Van der Elst) visa up to 3 months before your d
 </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/minister of religion.jpg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/ministry of religion.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
