--- a/ireland_app/static/assets/css/style.css
+++ b/ireland_app/static/assets/css/style.css
@@ -1447,8 +1447,20 @@ section {
   background: #fff;
 }
 
-.contact .php-email-form .form-group {
-  padding-bottom: 8px;
+.form-control {
+  display: block;
+      width: 100%;
+      height: calc(1.5em + .75rem + 2px);
+      padding: .375rem .75rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #495057;
+      background-color: #fff;
+      background-clip: padding-box;
+      border: 1px solid #ced4da;
+      border-radius: .25rem;
+      transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .contact .php-email-form .error-message {
