--- a/ireland_app/templates/blogs.html
+++ b/ireland_app/templates/blogs.html
@@ -6,7 +6,7 @@
 
 <section id="blogs">
 <div class="section-title">
-  <span style="color: black;">Breaking News</span>
+  <!-- <span style="color: black;">Breaking News</span> -->
 
 </div>
   <div class="container">
