Coming soon added

--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -71,17 +71,17 @@
 
         <li class="dropdown"><a href="#"><span>Migration Services</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-              <li>  <a href="#">Italy</a> </li>
-              <li>  <a href="#">Spain</a> </li>
+              <li>  <a href="{% url 'coming_soon' %}">Italy</a> </li>
+              <li>  <a href="{% url 'coming_soon' %}">Spain</a> </li>
               <li>  <a href="https://visatomalta.com/">Malta</a> </li>
               <li>  <a href="https://visatoportugal.pro/">Portugal</a> </li>
-              <li>  <a href="#">Greece</a> </li>
-              <li>  <a href="#">Cyprus</a> </li>
+              <li>  <a href="{% url 'coming_soon' %}">Greece</a> </li>
+              <li>  <a href="https://visatocyprus.com/">Cyprus</a> </li>
               <li>  <a href="https://visatonewzealand.com/">New Zealand</a> </li>
               <li>  <a href="https://visatocanada.pro/">Canada</a> </li>
               <li>  <a href="http://visatogermany.com/">Germany</a> </li>
               <li>  <a href="https://www.visatoaustralia.pro/">Australia</a> </li>
-              <li>  <a href="#">Denmark</a> </li>
+              <li>  <a href="{% url 'coming_soon' %}">Denmark</a> </li>
 
             </ul>
         </li>
@@ -157,24 +157,24 @@
          <div class="col-lg-2 col-md-6 footer-links">
            <h4>Migration Services</h4>
            <ul>
-             <li> <i class="bx bx-chevron-right"></i> <a href="#">Italy</a> </li>
-             <li> <i class="bx bx-chevron-right"></i> <a href="#">Spain</a> </li>
+             <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Italy</a> </li>
+             <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Spain</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatomalta.com/">Malta</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatoportugal.pro/">Portugal</a> </li>
-             <li> <i class="bx bx-chevron-right"></i> <a href="#">Greece</a> </li>
+             <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Greece</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatocyprus.com/">Cyprus</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatonewzealand.com/">NewZealand</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://visatocanada.pro/">Canada</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="http://visatogermany.com/">Germany</a> </li>
              <li> <i class="bx bx-chevron-right"></i> <a href="https://www.visatoaustralia.pro/">Australia</a> </li>
-             <li> <i class="bx bx-chevron-right"></i> <a href="#">Denmark</a> </li>
+             <li> <i class="bx bx-chevron-right"></i> <a href="{% url 'coming_soon' %}">Denmark</a> </li>
 
            </ul>
            </div>
 
          <div class="col-lg-4 col-md-6 footer-newsletter">
            <h4>Our Newsletter</h4>
-            <form action="" method="post">
+            <form action="{% url 'coming_soon' %}" >
              <input type="email" name="email"><input type="submit" value="Subscribe">
            </form>
 
