--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -27,7 +27,7 @@
         <!--Caption-->
         <div class="carousel-caption">
           <div class="animated fadeInDown">
-            <h1 style="font-weight:600;  margin-top: -450px; font-family: Oswald; font-size:50px;">Welcome To Ireland</h1>
+            <h1 class = "EXP">Welcome To Ireland</h1>
           </div>
         </div>
         <!--Caption-->
