--- a/ireland_app/static/assets/css/style.css
+++ b/ireland_app/static/assets/css/style.css
@@ -111,6 +111,46 @@ h1, h2, h3, h4, h5, h6 {
   max-height: 40px;
 }
 
+#google_translate_element{
+  margin-right: 20px;
+  background-color: #cc1616;
+}
+
+.goog-te-gadget-simple{
+  background-color: #cc1616;
+}
+
+.goog-te-banner{
+overflow-x: auto !important;
+
+}
+.modal-dropdown{
+  max-width: 100%;
+}
+
+@media only screen and (max-width: 700px) {
+  #google_translate_element{
+    width: 100px;
+    overflow-x: auto !important;
+
+  }
+}
+
+.responsive{
+  width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive{
+    padding-left: 0;
+    width: 100%;
+  }
+}
+
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
