<Added logos, formatted text according to doc>

--- a/ireland_app/templates/longvisa.html
+++ b/ireland_app/templates/longvisa.html
@@ -20,25 +20,29 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/study icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">Study visa</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/family member icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Join a family member visa</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/uk family member icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Joining your UK national family member in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
-          <i class="ri-store-line"></i>
+          <img src="{% static 'assets/icons/employment icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-store-line"></i> -->
           <h4 class="d-none d-lg-block">Employment visa</h4>
         </a>
       </li>
@@ -55,7 +59,7 @@
             <p>You can apply for a study visa up to 3 months before your date of travel to Ireland.</p>
             <p>If you are visiting another State prior to travelling to Ireland, you must have the relevant visa for that State in your passport before applying for an Irish visa.</p>
 
-            <ul>Supporting documentation
+            <ul><b>Supporting documentation</b>
               <li><i class="ri-check-double-line"></i> The documents below are important because they provide information about your personal circumstances in the country from which you are applying.</li>
               <li><i class="ri-check-double-line"></i> The onus is on you to satisfy the Visa Officer that a visa should be granted for the purpose sought.</li>
               <li><i class="ri-check-double-line"></i>The submission of any or all of these documents does not guarantee that your application will be successful.</li>
@@ -211,7 +215,7 @@ Original documents must be provided.
             <p>There are different types of employment permits issued by DJEI including Critical Skills Employment Permits and Work Permits. DJEI will shortly introduce a new range of employment permits. The correct visa type for a holder of any type of employment permit issued by DJEI is the Employment (Permits etc.).
 </p>
               <p>You can apply for an Employment (Permits etc.) visa up to 3 months before your date of travel to Ireland.If you are visiting another state prior to travelling to Ireland, you must have the relevant visa for that state in your passport before applying for an Irish visa.</p>
-            <ul>Supporting documentation
+            <ul><b>Supporting documentation</b>
               <li><i class="ri-check-double-line"></i> The documents below are important because they provide information about your personal circumstances in the country from which you are applying.</li>
               <li><i class="ri-check-double-line"></i>The onus is on you to satisfy the Visa Officer that a visa should be granted for the purpose sought.</li>
               <li><i class="ri-check-double-line"></i>The submission of any or all of these documents does not guarantee that your application will be successful.</li>
@@ -238,25 +242,29 @@ Original documents must be provided.
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-5">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/employment icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">Employment (researcher) visa</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-6">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/employment icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Employment (Van der Elst) visa</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-7">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/minister of religion icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Minister of religion visa</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-8">
-          <i class="ri-store-line"></i>
+          <img src="{% static 'assets/icons/volunteer icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-store-line"></i> -->
           <h4 class="d-none d-lg-block">Volunteer visa</h4>
         </a>
       </li>
@@ -274,7 +282,7 @@ Original documents must be provided.
 You can apply for an Employment (Scientific Researcher) visa up to 3 months before your date of travel to Ireland.
 If you are visiting another State prior to travelling to Ireland, you must have the relevant visa for that State in your passport before applying for an Irish visa.
 </p>
-          <ul>Supporting documentation
+          <ul><b>Supporting documentation</b>
             <li><i class="ri-check-double-line"></i>The documents below are important because they provide information about your personal circumstances in the country from which you are applying.</li>
             <li><i class="ri-check-double-line"></i>The onus is on you to satisfy the Visa Officer that a visa should be granted for the purpose sought.</li>
             <li><i class="ri-check-double-line"></i>The submission of any or all of these documents does not guarantee that your application will be successful.</li>
@@ -321,7 +329,7 @@ You can apply for an Employment (Van der Elst) visa up to 3 months before your d
               <p>If you are visiting another State prior to travelling to Ireland, you must have the relevant visa for that State in your passport before applying for an Irish visa.</p>
 
               <ul>
-                Supporting documentation
+                <b>Supporting documentation</b>
                 <li>The documents below are important because they provide information about your personal circumstances in the country from which you are applying.</li>
                 <li>The onus is on you to satisfy the Visa Officer that a visa should be granted for the purpose sought.</li>
                 <li>The submission of any or all of these documents does not guarantee that your application will be successful.</li>
