--- a/ireland_app/templates/shortvisa.html
+++ b/ireland_app/templates/shortvisa.html
@@ -18,19 +18,22 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-4" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/policy c visa icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">Policy for consideration of short stay ‘C’ visas</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/assessment icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Assessment criteria</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/imp policy icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Other imp policy</h4>
         </a>
       </li>
@@ -99,7 +102,7 @@
               <b>Important:</b> Do not include false or misleading information or documents in your application. If you do, your application may be refused. In some circumstances, you may not be allowed to appeal the visa decision and may be blocked from getting an Irish visa for 5 years.</p>
               <i>This is the norm in many countries.</i>
             <ul>
-              <li><i class="ri-check-double-line"></i> A short stay 'C' visa is for 90 days or less.</li>
+              <li><i class="ri-check-double-line"></i> A short stay 'C' visa is for <b>90 days or less</b>.</li>
               <li><i class="ri-check-double-line"></i>A short stay tourist visa allows you to travel to Ireland for tourism or study for up to 90 days, subject to the conditions described below. All short stay visas are also called 'C' visas.</li>
               <!-- <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li> -->
             </ul>
@@ -124,19 +127,22 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-4" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-4">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/about visa icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">About this visa</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-5">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/who needs to apply icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Who needs to apply</h4>
         </a>
       </li>
       <li class="nav-item col-4" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-6">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/spl visa program icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Special visa programmes</h4>
         </a>
       </li>
@@ -155,7 +161,7 @@
             <h3> About this visa</h3>
 
             <p>
-              A short stay 'C' visit (tourist) visa allows you to travel to Ireland for up to 90 days for:
+              A <b>short stay 'C' visit (tourist) visa </b> allows you to travel to Ireland for up to 90 days for:
               <ul>
                 <li>Tourism</li>
                 <li>Study, eg a short term English language course</li>
@@ -167,7 +173,7 @@
           <li><i class="ri-check-double-line"></i>Use any publicly funded services, eg a public hospital</li>
             </p>
             <p>
-            Note: A visa allows you to travel to Ireland only. It does not give you permission to enter the country or to stay here. An immigration officer at border control can refuse you entry even if you have a visa.
+            <b>Note:</b> A visa allows you to travel to Ireland only. It does not give you permission to enter the country or to stay here. An immigration officer at border control can refuse you entry even if you have a visa.
 
             </p>
           </div>
@@ -276,11 +282,11 @@
         <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Business visa <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
         <div id="faq1" class="collapse" data-bs-parent=".faq-list">
           <p>
-          A short stay 'C' business visa allows you to travel to Ireland for up to 90 days for activities related to your job, including to:
+          A <b>short stay 'C' business visa </b> allows you to travel to Ireland for up to 90 days for activities related to your job, including to:
                 <ul>
                   <li><i class="ri-check-double-line"></i>Attend meetings</li>
                   <li><i class="ri-check-double-line"></i>Negotiate or sign agreements or contracts</li>
-                  <li><i class="ri-check-double-line"></i>Work for 14 days or less (based on the rules below)</li>
+                  <li><i class="ri-check-double-line"></i>Work for <b>14</b> days or less (based on the rules below)</li>
                 </ul>
           </p>
 
