--- a/ireland_app/templates/studentvisa.html
+++ b/ireland_app/templates/studentvisa.html
@@ -17,25 +17,29 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/advantage of education system icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">Advantage of Ireland Education System</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/academic disciplines icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Popular academic disciplines in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/universities icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Best universities in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
-          <i class="ri-store-line"></i>
+          <img src="{% static 'assets/icons/student visa icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-store-line"></i> -->
           <h4 class="d-none d-lg-block">Student Visa Types</h4>
         </a>
       </li>
@@ -128,25 +132,29 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-5">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/when where to apply icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">When and where to apply for study visa in Ireland?</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-6">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/language req icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Language requirements for studying in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-7">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/documents req icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Documents required for the student visa in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-8">
-          <i class="ri-store-line"></i>
+          <img src="{% static 'assets/icons/permit residency icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-store-line"></i> -->
           <h4 class="d-none d-lg-block">Conditions to apply for a residence permit</h4>
         </a>
       </li>
