--- a/ireland_app/templates/whyus.html
+++ b/ireland_app/templates/whyus.html
@@ -17,25 +17,29 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/irish economy icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">IRISH ECONOMY</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/companies in ireland icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Types of Companies in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/property market icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">The Irish Property Market</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
-          <i class="ri-store-line"></i>
+          <img src="{% static 'assets/icons/education system icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-store-line"></i> -->
           <h4 class="d-none d-lg-block">The Irish Education System</h4>
         </a>
       </li>
@@ -110,7 +114,7 @@
               <li><i class="ri-check-double-line"></i> Education in Ireland is compulsory from ages 6 to 16. Private tuition is also readily available for students at all levels of the education system</li>
             </ul>
             <p></p>
-            <ul>The Irish education system is made up of 4 levels:
+            <ul><b>The Irish education system is made up of 4 levels:</b>
               <li><i class="ri-check-double-line"></i> Pre-School* (3 to 4 Years of Age)</li>
               <li><i class="ri-check-double-line"></i>   First Level* (4 to 12 Years of Age)</li>
               <li><i class="ri-check-double-line"></i>   Second Level* (12 to 18 Years of Age)</li>
@@ -128,25 +132,29 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link " data-bs-toggle="tab" href="#tab-5">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/best universities icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">Universities in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-6">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/healthcare icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">HealthCare in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-7">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/social welfare icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Irish Social Welfare (Citizens)</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-8">
-          <i class="ri-store-line"></i>
+          <img src="{% static 'assets/icons/immigration program icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-store-line"></i> -->
           <h4 class="d-none d-lg-block">Irish Immigrant Investor Programme (IIP)</h4>
         </a>
       </li>
@@ -201,28 +209,28 @@
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
             <h3> Irish Social Welfare (Citizens)</h3>
 
-            <h5>Jobseekers Benefit</h5>
+            <h5><b>Jobseekers Benefit</b></h5>
             <p>Weekly payment to people who are out of work and are covered by social insurance. (Maximum personal rate is €812 per month)</p>
-            <h5>Jobseekers Allowance</h5>
+            <h5><b>Jobseekers Allowance</b></h5>
             <p>For those who do not qualify for Jobseeker’s Benefit. Must be capable, available and actively seeking work. (Maximum personal rate of persons over 26 years is €812 per month)</p>
-            <h5>Self-employed unemployment</h5>
+            <h5><b>Self-employed unemployment</b></h5>
             <p>Means tested on an individual basis.</p>
 
 
-            <h5>State Pension (Contributory)</h5>
+            <h5><b>State Pension (Contributory)</b></h5>
             <p>Dependent on social insurance contributions. (Maximum personal rate is €993.2 per month)</p>
-            <h5>State Pension (Non-Contributory)</h5>
+            <h5><b>State Pension (Non-Contributory)</b></h5>
             <p>Means tested and must be over 66 years old and under 80 years (Maximum personal rate is €948 per month), aged 80+ (Maximum personal rate is €988).</p>
-            <h5>Illness</h5>
+            <h5><b>Illness</b></h5>
             <p>Given to people who are unable to work due to illness. (Maximum personal rate is €812 per month).</p>
 
-            <h5>Maternity Benefit</h5>
+            <h5><b>Maternity Benefit</b></h5>
             <p>Must be covered by social insurance (Maximum personal payment of €980 per month)</p>
 
-            <h5>Irish Heritage</h5>
+            <h5><b>Irish Heritage</b></h5>
             <p>Whether it is nature, wildlife, folklore or built heritage, Ireland is a land of historical enlightenment. Diverse events are regularly hosted nationwide and many are organized by local communities which lend great variety and authenticity. Examples of such occasions include medieval fairs, wild life walks, lectures, poetry recitals, traditional music sessions, storytelling, historical re-enactments, local history walks, theatrical shows and maritime events.</p>
 
-            <h5>Sport</h5>
+            <h5><b>Sport</b></h5>
             <p>Ireland is a country passionate about sport and outdoor activities. Irish professional competitors regularly rank among the world’s elite in sports such as Golf, Equine Sports and Boxing.
 ‘Gaelic Games’ which include ‘Gaelic Hurling’ and ‘Gaelic Football’ are very popular in Ireland. Nearly every small village has ‘Gaelic Game’ teams which all are welcome to join. Sport in Ireland brings people and communities together to share a common passion.</p>
 
@@ -260,25 +268,29 @@
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-9">
-          <i class="ri-gps-line"></i>
+          <img src="{% static 'assets/icons/investment icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-gps-line"></i> -->
           <h4 class="d-none d-lg-block">Investment Options</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-10">
-          <i class="ri-body-scan-line"></i>
+          <img src="{% static 'assets/icons/terms icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-body-scan-line"></i> -->
           <h4 class="d-none d-lg-block">Terms</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-11">
-          <i class="ri-sun-line"></i>
+          <img src="{% static 'assets/icons/residency icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-sun-line"></i> -->
           <h4 class="d-none d-lg-block">Irish Residency Documentation</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-12">
-          <i class="ri-store-line"></i>
+          <img src="{% static 'assets/icons/visa icon.png' %}" class="icons" alt="">
+          <!-- <i class="ri-store-line"></i> -->
           <h4 class="d-none d-lg-block">Do you need a VISA?</h4>
         </a>
       </li>
@@ -356,7 +368,7 @@ The specific requirements are that you have a period of 365 days* (1 year) conti
 
 
             <ul>You do not need an Irish visa to travel to Ireland if:
-              <li><i class="ri-check-double-line"></i>  you have a valid Irish Residence Permit, or you have a Travel Document which was issued by Ireland</li>
+              <li><i class="ri-check-double-line"></i>  you have a valid Irish Residence Permit, <b>or</b> you have a Travel Document which was issued by Ireland</li>
               <li><i class="ri-check-double-line"></i> you have a document called “Residence card of a family member of a Union citizen” issued, by any country, under 10 of Directive 2004/38/EC (the “Free Movement Directive”). Please contact the authority who issued the document for advice if the document you have comes within the definition of the Directive, as implemented by that particular Member State.</li>
               <!-- <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li> -->
             </ul>
