--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -37,6 +37,9 @@
       font-family: Oswald; 
       font-size:50px;
     }
+    .icons{
+      width: 70px;
+    }
     @media (max-width: 600px){
   .nav-quote {
       display: none;
@@ -44,6 +47,9 @@
   .EXP{
     margin-top: 30px;
     font-size: 29px;
+  }
+  .icons{
+    width: 50px;
   }
   }
   </style>
